src/pycropml/transpiler/antlr_py/grammars/Crop2MLComposition.g4
grammar Crop2MLComposition;

/*
 * Parser rules
 */

composition
    : NEWLINE*
      documentation
      NEWLINE+
      (statement NEWLINE+)*
      statement?
      NEWLINE*
      EOF
    ;

/* YAML metadata enclosed in a Python-style module docstring. */
documentation
    : DOCSTRING
    ;

statement
    : modelCall
    | modelInputAssignment
    | compositionOutputAssignment
    ;

/*
 * Calls a ModelUnit.
 *
 * Example:
 *     SoilTemperature()
 */
modelCall
    : modelName LPAREN RPAREN
    ;

/*
 * Supplies a ModelUnit input.
 *
 * External composition input. ``self`` denotes the current composition:
 *     SoilTemperature.timeStep = self.timeStep
 *
 * Internal connection:
 *     SoilTemperature.surfaceTemperature =
 *         SurfaceModel.surfaceTemperature
 */
modelInputAssignment
    : modelPort ASSIGN source
    ;

/*
 * Legacy syntax for publishing a ModelUnit output as a composition output.
 * New algorithms should use ``self.output = Model.output``, which is parsed
 * as a modelInputAssignment and distinguished semantically.
 *
 * Example:
 *     surfaceTemperature =
 *         SurfaceModel.soilSurfaceTemperature
 */
compositionOutputAssignment
    : identifier ASSIGN modelPort
    ;

/*
 * A bare identifier is a legacy composition input. ``self.port`` is an
 * explicit composition input. Any other qualified port is the output of a
 * called component.
 */
source
    : identifier
    | modelPort
    ;

modelPort
    : modelName DOT portName
    ;

modelName
    : identifier
    ;

portName
    : identifier
    ;

identifier
    : IDENTIFIER
    ;


/*
 * Lexer rules
 */

LPAREN
    : '('
    ;

RPAREN
    : ')'
    ;

DOT
    : '.'
    ;

ASSIGN
    : '='
    ;

/* Keep the complete YAML document as one token, including newlines. */
DOCSTRING
    : '"""' .*? '"""'
    | '\'\'\'' .*? '\'\'\''
    ;

IDENTIFIER
    : [a-zA-Z_] [a-zA-Z_0-9]*
    ;

/*
 * Explicit line continuation:
 *
 *     surfaceTemperature = \
 *         Model.surfaceTemperature
 *
 * The backslash, following whitespace, and newline are discarded.
 */
LINE_CONTINUATION
    : '\\' [ \t]* '\r'? '\n' -> skip
    ;

COMMENT
    : '#' ~[\r\n]* -> skip
    ;

NEWLINE
    : '\r'? '\n'
    ;

WS
    : [ \t]+ -> skip
    ;
